--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,20 @@
 body {
     text-align: center;
+    font-family: 'Raleway', sans-serif;
+}
+
+.game-over-modal {
+	position: absolute;
+	top: 110px;
+	left: 480px;
+	width: 380px;
+	height: 320px;
+	background-color: #333333;
+	border-radius: 7px;
+	opacity: .98;
+	color: white;
+}
+
+.display-none {
+	display: none;
 }
